{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 275,
  "lineage": "00c091a9-884e-fd31-c825-209b61b0389b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "wp-vpc-internal-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group/sg-0c296cf0a4080ab7d",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c296cf0a4080ab7d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "381491823453",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ext-sub-a-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e0e7bd4888fef8a",
            "association_id": "eipassoc-093362e53a23e992f",
            "domain": "vpc",
            "id": "eipalloc-07e0e7bd4888fef8a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0eaef0e024fb66a3d",
            "private_dns": "ip-10-0-10-34.us-east-2.compute.internal",
            "private_ip": "10.0.10.34",
            "public_dns": "ec2-18-216-5-187.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.5.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.wp-net-igw",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ext-sub-b-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5a8b1e5646230c4",
            "association_id": "eipassoc-08d74ce22f340f2c8",
            "domain": "vpc",
            "id": "eipalloc-0d5a8b1e5646230c4",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f12cc62a5ec849d4",
            "private_dns": "ip-10-0-10-99.us-east-2.compute.internal",
            "private_ip": "10.0.10.99",
            "public_dns": "ec2-18-188-189-108.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.189.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.wp-net-igw",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp-net-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:internet-gateway/igw-07d067397190f1070",
            "id": "igw-07d067397190f1070",
            "owner_id": "381491823453",
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ext-sub-a-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e0e7bd4888fef8a",
            "association_id": "eipassoc-093362e53a23e992f",
            "connectivity_type": "public",
            "id": "nat-057ac2f3444d780f1",
            "network_interface_id": "eni-0eaef0e024fb66a3d",
            "private_ip": "10.0.10.34",
            "public_ip": "18.216.5.187",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1a5cb2ce70434ed"
          },
          "dependencies": [
            "aws_eip.ext-sub-a-eip",
            "aws_internet_gateway.wp-net-igw",
            "aws_subnet.wp-external-sub-a",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ext-sub-b-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5a8b1e5646230c4",
            "association_id": "eipassoc-08d74ce22f340f2c8",
            "connectivity_type": "public",
            "id": "nat-0299fd9ab19297b8d",
            "network_interface_id": "eni-0f12cc62a5ec849d4",
            "private_ip": "10.0.10.99",
            "public_ip": "18.188.189.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da868da778a9d7e9"
          },
          "dependencies": [
            "aws_eip.ext-sub-b-eip",
            "aws_internet_gateway.wp-net-igw",
            "aws_subnet.wp-external-sub-b",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-app-routes-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:route-table/rtb-088e81bf4066dbd0c",
            "id": "rtb-088e81bf4066dbd0c",
            "owner_id": "381491823453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057ac2f3444d780f1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ext-sub-a-eip",
            "aws_internet_gateway.wp-net-igw",
            "aws_nat_gateway.ext-sub-a-nat",
            "aws_subnet.wp-external-sub-a",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-app-routes-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:route-table/rtb-08ed2e5f9c76b23ea",
            "id": "rtb-08ed2e5f9c76b23ea",
            "owner_id": "381491823453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0299fd9ab19297b8d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ext-sub-b-eip",
            "aws_internet_gateway.wp-net-igw",
            "aws_nat_gateway.ext-sub-b-nat",
            "aws_subnet.wp-external-sub-b",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-net-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:route-table/rtb-0438016b5aad8d68d",
            "id": "rtb-0438016b5aad8d68d",
            "owner_id": "381491823453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d067397190f1070",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp-net-igw",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp-app-routes-a-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015318c28e92ccc34",
            "route_table_id": "rtb-088e81bf4066dbd0c",
            "subnet_id": "subnet-0ddb931dcc84169ef"
          },
          "dependencies": [
            "aws_eip.ext-sub-a-eip",
            "aws_internet_gateway.wp-net-igw",
            "aws_nat_gateway.ext-sub-a-nat",
            "aws_route_table.wp-app-routes-a",
            "aws_subnet.wp-app-sub-a",
            "aws_subnet.wp-external-sub-a",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp-app-routes-b-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a8534950129d12",
            "route_table_id": "rtb-08ed2e5f9c76b23ea",
            "subnet_id": "subnet-0c9669a92ad576003"
          },
          "dependencies": [
            "aws_eip.ext-sub-b-eip",
            "aws_internet_gateway.wp-net-igw",
            "aws_nat_gateway.ext-sub-b-nat",
            "aws_route_table.wp-app-routes-b",
            "aws_subnet.wp-app-sub-b",
            "aws_subnet.wp-external-sub-b",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp-ext-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008dc7d52ed803a20",
            "route_table_id": "rtb-0438016b5aad8d68d",
            "subnet_id": "subnet-0d1a5cb2ce70434ed"
          },
          "dependencies": [
            "aws_internet_gateway.wp-net-igw",
            "aws_route_table.wp-net-routes",
            "aws_subnet.wp-external-sub-a",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp-ext-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0542d2e0aaebb1a",
            "route_table_id": "rtb-0438016b5aad8d68d",
            "subnet_id": "subnet-0da868da778a9d7e9"
          },
          "dependencies": [
            "aws_internet_gateway.wp-net-igw",
            "aws_route_table.wp-net-routes",
            "aws_subnet.wp-external-sub-b",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-net-allow-external-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group/sg-03299fdc88f5c8943",
            "description": "allow HTTP from external sources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0106fc917f8214ba7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-03299fdc88f5c8943",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0106fc917f8214ba7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_external_http",
            "name_prefix": "",
            "owner_id": "381491823453",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Purpose",
              "value": "allow-http-external"
            },
            "tags_all": {
              "name": "Purpose",
              "value": "allow-http-external"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-net-external-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group/sg-0106fc917f8214ba7",
            "description": "allow HTTP from external sources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0106fc917f8214ba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_public_http",
            "name_prefix": "",
            "owner_id": "381491823453",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Purpose",
              "value": "allow-https-external"
            },
            "tags_all": {
              "name": "Purpose",
              "value": "allow-https-external"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp-app-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:subnet/subnet-0ddb931dcc84169ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb931dcc84169ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491823453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Purpose": "wp-app-subnet"
            },
            "tags_all": {
              "Purpose": "wp-app-subnet"
            },
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp-app-sub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:subnet/subnet-0c9669a92ad576003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9669a92ad576003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491823453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Purpose": "wp-app-subnet"
            },
            "tags_all": {
              "Purpose": "wp-app-subnet"
            },
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp-db-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:subnet/subnet-043c0831ba1e10853",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043c0831ba1e10853",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491823453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Purpose": "wp-db-subnet-group"
            },
            "tags_all": {
              "Purpose": "wp-db-subnet-group"
            },
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp-db-sub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:subnet/subnet-0be1e123a0c13b7dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be1e123a0c13b7dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491823453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Purpose": "wp-db-subnet-group"
            },
            "tags_all": {
              "Purpose": "wp-db-subnet-group"
            },
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp-external-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:subnet/subnet-0d1a5cb2ce70434ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1a5cb2ce70434ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491823453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Purpose": "wp-external"
            },
            "tags_all": {
              "Purpose": "wp-external"
            },
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp-external-sub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:subnet/subnet-0da868da778a9d7e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.10.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da868da778a9d7e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491823453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Purpose": "wp-external"
            },
            "tags_all": {
              "Purpose": "wp-external"
            },
            "vpc_id": "vpc-0ea62d03a99089e0b"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:vpc/vpc-0ea62d03a99089e0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011874ca6bf6d4bcf",
            "default_route_table_id": "rtb-06465b20d246770ff",
            "default_security_group_id": "sg-0c296cf0a4080ab7d",
            "dhcp_options_id": "dopt-033b81fb0a6cb704f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea62d03a99089e0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06465b20d246770ff",
            "owner_id": "381491823453",
            "tags": {
              "Name": "wp_vpc"
            },
            "tags_all": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "wp-net-allow-external-http-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group-rule/sgr-04057aef993731b08",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04057aef993731b08",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0106fc917f8214ba7",
            "security_group_id": "sg-03299fdc88f5c8943",
            "security_group_rule_id": "sgr-04057aef993731b08",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp-net-allow-external-http",
            "aws_security_group.wp-net-external-allow-http",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "wp-net-allow-internet-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group-rule/sgr-0e0caf63c79e5f1eb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e0caf63c79e5f1eb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03299fdc88f5c8943",
            "security_group_rule_id": "sgr-0e0caf63c79e5f1eb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp-net-allow-external-http",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "wp-net-external-http-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group-rule/sgr-0b233b7efb791d415",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b233b7efb791d415",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0106fc917f8214ba7",
            "security_group_rule_id": "sgr-0b233b7efb791d415",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp-net-external-allow-http",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wp-net-allow-external-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group-rule/sgr-0e37c8a1191ed2d97",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e37c8a1191ed2d97",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0106fc917f8214ba7",
            "security_group_id": "sg-03299fdc88f5c8943",
            "security_group_rule_id": "sgr-0e37c8a1191ed2d97",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp-net-allow-external-http",
            "aws_security_group.wp-net-external-allow-http",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "wp-net-external-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491823453:security-group-rule/sgr-06e34f86554bf54b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06e34f86554bf54b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0106fc917f8214ba7",
            "security_group_rule_id": "sgr-06e34f86554bf54b7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp-net-external-allow-http",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    }
  ]
}